# MCP

./: README.md  pyproject.toml
.github/: copilot-instructions.md
src/mcp_pdf_server/: __init__.py  server.py
