[project]
name = "mcp-pdf-docx-server"
version = "0.1.0"
description = "MCP server for PDF and DOCX tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=0.4.0",
  "pymupdf>=1.24.0",
  "pdf2docx>=0.5.8",
  "python-docx>=1.1.0",
  "docx2pdf>=0.1.8",
  "reportlab>=4.2.0",
  "weasyprint>=62.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
